cloudformation/tekpossible-devops.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  TekPossibleVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.84.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: aws_iac_generated
          Value: cloudformation
        - Key: Name
          Value: TekPossibleVPC

  TekPossibleDevelopment:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId: !Ref TekPossibleVPC
      CidrBlock: 10.84.68.0/24
      Tags:
        - Key: aws_iac_generated
          Value: cloudformation
        - Key: Name
          Value: TekPossibleDevelopmentSubnet

  TekPossibleTest:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId: !Ref TekPossibleVPC
      CidrBlock: 10.84.84.0/24
      Tags:
        - Key: aws_iac_generated
          Value: cloudformation
        - Key: Name
          Value: TekPossibleTestSubnet

  TekPossibleProduction:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId: !Ref TekPossibleVPC
      CidrBlock: 10.84.80.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws_iac_generated
          Value: cloudformation
        - Key: Name
          Value: TekPossibleProductionSubnet

  TekPossibleIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: TekPossibleIGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref TekPossibleVPC
      InternetGatewayId: !Ref TekPossibleIGW

  TekPossibleVPCRouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TekPossibleVPC

  TekPossiblePublicDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TekPossibleVPCRouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref TekPossibleIGW

  TekPossibleVPCRouteTablePublicAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref TekPossibleProduction
      RouteTableId: !Ref TekPossibleVPCRouteTablePublic

  TekPossibleNATGWEIP:    
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref TekPossibleVPC
      Tags:
        - Key: Name
          Value: TekPossibleNATGWEIP

  TekPossibleNATGW:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt TekPossibleNATGWEIP.AllocationId # WACK
      ConnectivityType: public
      SubnetId: !Ref TekPossibleProduction

  TekPossibleVPCRouteTablePrivate:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TekPossibleVPC

  TekPossiblePrivateDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref TekPossibleVPCRouteTablePrivate
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref TekPossibleNATGW

  TekPossibleVPCRouteTablePrivateDevAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref TekPossibleDevelopment
      RouteTableId: !Ref TekPossibleVPCRouteTablePrivate

  TekPossibleVPCRouteTablePrivateTestAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref TekPossibleTest
      RouteTableId: !Ref TekPossibleVPCRouteTablePrivate
